--- a/package.json
+++ b/package.json
@@ -9,10 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "dayjs": "^1.11.3",
+    "i18next": "^21.8.11",
     "next": "12.1.6",
+    "next-i18next": "^11.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-pageflip": "^2.0.3"
+    "react-pageflip": "^2.0.3",
+    "sass": "^1.53.0",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "eslint": "8.17.0",
