--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-pageflip": "^2.0.3",
+    "react-toastify": "^9.0.5",
     "sass": "^1.53.0",
     "universal-cookie": "^4.0.4"
   },
