--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "18.1.0",
     "react-pageflip": "^2.0.3",
+    "react-player": "^2.10.1",
     "react-toastify": "^9.0.5",
     "replace-react": "0.0.3",
     "sass": "^1.53.0",
@@ -27,6 +28,8 @@
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.12.2",
     "eslint": "8.17.0",
-    "eslint-config-next": "12.1.6"
+    "eslint-config-next": "12.1.6",
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1"
   }
 }
