--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.29.1",
     "dayjs": "^1.11.3",
     "i18next": "^21.8.11",
     "next": "12.1.6",
