--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "12.1.6",
     "next-i18next": "^11.0.0",
     "react": "18.1.0",
+    "react-audio-player": "^0.17.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-dom": "18.1.0",
     "react-pageflip": "^2.0.3",
