--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.17",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.29.1",
@@ -22,7 +25,9 @@
     "react-dom": "18.1.0",
     "react-pageflip": "^2.0.3",
     "react-player": "^2.10.1",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.0.8",
+    "recharts": "^2.2.0",
     "replace-react": "0.0.3",
     "sass": "^1.53.0",
     "universal-cookie": "^4.0.4"
