--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "recharts": "^2.2.0",
     "replace-react": "0.0.3",
     "sass": "^1.53.0",
+    "sweetalert2": "^11.6.16",
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
