add parent pages

--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/date-fns-jalali": "^2.16.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/lab": "^5.0.0-alpha.115",
     "@mui/material": "^5.10.17",
+    "@mui/x-date-pickers": "^5.0.13",
+    "@reduxjs/toolkit": "^1.9.1",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "date-fns": "^2.29.1",
@@ -25,9 +29,11 @@
     "react-dom": "18.1.0",
     "react-pageflip": "^2.0.3",
     "react-player": "^2.10.1",
+    "react-redux": "^8.0.5",
     "react-table": "^7.8.0",
     "react-toastify": "^9.0.8",
     "recharts": "^2.2.0",
+    "redux": "^4.2.0",
     "replace-react": "0.0.3",
     "sass": "^1.53.0",
     "sweetalert2": "^11.6.16",
