--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.1.3",
     "date-fns": "^2.29.1",
     "dayjs": "^1.11.3",
+    "email-validator": "^2.0.4",
     "i18next": "^21.8.11",
     "next": "12.1.6",
     "next-i18next": "^11.0.0",
